# WorldClass

Stanford CS149 Parallel Computing/Programming Assignments/asst5/: .gitignore  Cargo.toml  README.md  build.sh  install.ps1  install.sh  requirements.txt
Stanford CS149 Parallel Computing/Programming Assignments/asst5/problems/: eval.py
Stanford CS149 Parallel Computing/Programming Assignments/asst5/problems/1d-occupancy-decoder/: README.md  model.py  reference.py  task.py  wrap_cuda_submission.py
Stanford CS149 Parallel Computing/Programming Assignments/asst5/problems/flashattention/: README.md  reference.py  task.py  wrap_cuda_submission.py
Stanford CS149 Parallel Computing/Programming Assignments/asst5/problems/histogram/: README.md  clean.sh  reference.py  task.py  wrap_cuda_submission.py
Stanford CS149 Parallel Computing/Programming Assignments/asst5/problems/rk4/: README.md  clean.sh  reference.py  task.py  wrap_cuda_submission.py
Stanford CS149 Parallel Computing/Programming Assignments/asst5/problems/swiglu/: README.md  reference.py  task.py  wrap_cuda_submission.py
Stanford CS149 Parallel Computing/Programming Assignments/asst5/src/: main.rs
Stanford CS149 Parallel Computing/Programming Assignments/asst5/src/cmd/: auth.rs  mod.rs  submit.rs
Stanford CS149 Parallel Computing/Programming Assignments/asst5/src/models/: mod.rs
Stanford CS149 Parallel Computing/Programming Assignments/asst5/src/service/: mod.rs
Stanford CS149 Parallel Computing/Programming Assignments/asst5/src/utils/: mod.rs
Stanford CS149 Parallel Computing/asst1/: README.md
(+94 files in other folders)
